--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -1,4 +1,4 @@
-main {
+dash_main {
   background: #f3f4f6;
   grid-area: main;
   overflow-y: auto;
@@ -38,7 +38,7 @@ main {
   margin: 20px 0;
 }
 
-.card {
+.dashcard {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
